--- a/views/index.ejs
+++ b/views/index.ejs
@@ -143,7 +143,7 @@
 <body>
 
   <div class='notify-container'>
-    <i id='notify-icon' class='fa-solid fa-triangle-exclamation fa-beat'></i>
+    <i id='notify-icon'></i>
     <div class='notify-text'></div>
   </div>
 
