refactor: update window load event to use DOMContentLoaded event in admin-page.ejs

--- a/views/admin-page.ejs
+++ b/views/admin-page.ejs
@@ -287,7 +287,7 @@
     let allChallenges = []
     let allUsers = []
 
-    window.addEventListener("load", () => {
+    window.addEventListener("DOMContentLoaded", () => {
       fetch('/get-db-data', {
         method: 'GET',
         headers: {
