--- a/views/scoreboard.ejs
+++ b/views/scoreboard.ejs
@@ -8,6 +8,7 @@
   <link
     href='https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap'
     rel='stylesheet'>
+  <link rel='stylesheet' href='https://site-assets.fontawesome.com/releases/v6.4.0/css/all.css'>
   <link href="/styles/navigation.css" rel="stylesheet" type="text/css">
   <link href="/styles/table.css" rel="stylesheet" type="text/css">
   <style>
@@ -19,10 +20,47 @@
       background: rgb(230 230 230 / .8);
     }
 
-    .logged-user-row {
-      background-color: #35a850;
-      color: white;
+    tbody tr:nth-child(1) {
+      background-color: #e7d98b;
     }
+
+    tbody tr:nth-child(1):hover {
+      background-color: #cec27b;
+    }
+
+    tbody tr:nth-child(2) {
+      background-color: #cfcccc;
+    }
+
+    tbody tr:nth-child(2):hover {
+      background-color: #bfbdb9;
+    }
+
+    tbody tr:nth-child(3) {
+      background-color: #e6af78;
+    }
+
+    tbody tr:nth-child(3):hover {
+      background-color: #d19e6b;
+    }
+
+    .logged-user-row {
+      color: white;
+      animation: breathe 2s infinite;
+    }
+
+    @keyframes breathe {
+       0% {
+       transform: scale(1);
+       }
+       50% {
+       transform: scale(1.01);
+       }
+       100% {
+       transform: scale(1);
+       }
+    }
+
   </style>
 </head>
 
@@ -49,7 +87,10 @@
           <th>Posición</th>
           <th>Nombre</th>
           <th>Puntuación</th>
-          <th>Retos realizados</th>
+          <th>Retos</th>
+          <% if (loggedUser.isAdmin) { %>
+            <th>Retos solicitados</th>
+          <% } %>
         </tr>
       </thead>
       <tbody>
@@ -67,6 +108,11 @@
             <td>
               <%= user.challenges.length %>
             </td>
+            <% if (loggedUser.isAdmin) { %>
+              <td>
+                <%= user.pendingChallenges.length %>
+              </td>
+            <% } %>
           </tr>
           <% }) %>
       </tbody>
