--- a/public/styles/navigation.css
+++ b/public/styles/navigation.css
@@ -27,10 +27,12 @@
 }
 
 body {
+  position: relative;
   min-height: 100vh;
   background: linear-gradient(135deg, #8BC6EC 0%, #9599E2 100%);
   background-attachment: fixed;
   background-size: cover;
+  z-index: -10;
 }
 
 nav {
