--- a/views/user.ejs
+++ b/views/user.ejs
@@ -16,15 +16,52 @@
     h1 {
       display: flex;
       justify-content: center;
-      padding: 1rem;
+      padding: 2rem 0 1rem 0;
     }
 
     h1 div {
       width: max-content;
       padding: .5rem 1rem;
       border-radius: 8px;
-      background-color: #f1f1f1;
-      border: 1px solid #9a9a9a;
+      background-color: #ececec;
+      position: relative;
+      color: #333;
+    }
+
+    h1 div::before {
+      content: "";
+      position: absolute;
+      top: 0;
+      left: 0;
+      z-index: -1;
+      width: 100%;
+      height: 100%;
+      border-radius: 4px;
+      background: linear-gradient(45deg,
+          white, black, white);
+      background-size: 800%;
+      filter: blur(6px);
+      animation: glowing 20s linear infinite;
+    }
+
+    @keyframes glowing {
+      0% {
+        background-position: 0 0;
+      }
+
+      50% {
+        background-position: 400% 0;
+      }
+
+      100% {
+        background-position: 0 0;
+      }
+    }
+
+    @media (max-width: 600px) {
+      h1 {
+        font-size: 1.5rem;
+      }
     }
 
     h2 {
@@ -106,7 +143,7 @@
   </div>
   <h1>
     <div>
-      <%= userToShow.name %>
+      Daniel Fernández Varona
     </div>
   </h1>
 
